# mkcv

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: resume.example.yml
assets/templates/: _core.typ  _prelude.typ  classic-letter.typ  coverletter.typ  crisp.typ  formal.typ  modern.typ  serif.typ  sidebar.typ  split.typ
examples/: classic-letter.yml  cover-letter.yml  crisp.yml  formal.yml  senior-engineer.yml  serif.yml  sidebar.yml  split.yml  styled.yml  with-photo.yml
skills/mkcv/: README.md  SKILL.md  install.sh
skills/mkcv/evals/: evals.json
skills/mkcv/reference/: coaching.md  schema.md
skills/mkcv/scripts/: ensure-binary.sh
src/: build.rs  engine.rs  main.rs  parser.rs  template.rs  watcher.rs
